refactor: Simplify website
I simplified my website design to a single page with a little bit of
information about me on it.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Personal Website</title>
+    <title>Jonathan's Website</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
   </head>
 
   <body>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="contact.html">Contact</a>
-      <a href="working.html">Working on</a>
-    </nav>
+    <img src="./mugshot.jpeg" alt="Mugshot" style="height: 500px" />
+    <h2>Hello!</h2>
+    <button
+      onclick="window.location.href='https://github.com/realprogrammersusevim/'"
+    >
+      GitHub
+    </button>
+    <button
+      onclick="window.location.href='https://twitter.com/JonathanMilli15'"
+    >
+      Twitter
+    </button>
+    <button onclick="window.location.href='mailto:logouts.deco-0e@icloud.com'">
+      Email
+    </button>
+    <br />
+    <p>I'm Jonathan.</p>
+    <p>A kid in high school screwing around with computers.</p>
+    <p>I write code sometimes</p>
   </body>
 </html>
