fix: Remove image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   </head>
 
   <body>
-    <img src="./mugshot.jpeg" alt="Mugshot" style="height: 500px" />
     <h2>Hello!</h2>
     <button
       onclick="window.location.href='https://github.com/realprogrammersusevim/'"
@@ -23,7 +22,7 @@
     </button>
     <br />
     <p>I'm Jonathan.</p>
-    <p>A kid in high school screwing around with computers.</p>
+    <p>A guy screwing around with computers.</p>
     <p>I write code sometimes</p>
   </body>
 </html>
