fix: Add meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Jonathan's Website</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+    <meta name="description" content="Jonathan's personal website." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
