feat: Add Nostr profile

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <body>
     <h2>Hello!</h2>
     <button
+      onclick="window.location.href='https://astral.ninja/npub1uqeexjx2djkfwzxdnrnrrch5h2k4xn0uapcgsxm94ftaxrlhy5lqywjckg'"
+    >
+      Nostr
+    </button>
+    <button
       onclick="window.location.href='https://github.com/realprogrammersusevim/'"
     >
       GitHub
