--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <h2>Hello!</h2>
     <button
-      onclick="window.location.href='https://astral.ninja/npub1uqeexjx2djkfwzxdnrnrrch5h2k4xn0uapcgsxm94ftaxrlhy5lqywjckg'"
+      onclick="window.location.href='https://snort.social/p/npub1uqeexjx2djkfwzxdnrnrrch5h2k4xn0uapcgsxm94ftaxrlhy5lqywjckg'"
     >
       Nostr
     </button>
     <button
-      onclick="window.location.href='https://github.com/realprogrammersusevim/'"
+      onclick="window.location.href='https://github.com/realprogrammersusevim'"
     >
       GitHub
     </button>
