--- a/index.html
+++ b/index.html
@@ -2,34 +2,67 @@
 <html lang="en-US">
   <head>
     <title>Jonathan's Website</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="description" content="Jonathan's personal website." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
-    <h2>Hello!</h2>
-    <button
-      onclick="window.location.href='https://snort.social/p/npub1uqeexjx2djkfwzxdnrnrrch5h2k4xn0uapcgsxm94ftaxrlhy5lqywjckg'"
-    >
-      Nostr
-    </button>
-    <button
-      onclick="window.location.href='https://github.com/realprogrammersusevim'"
-    >
-      GitHub
-    </button>
-    <button
-      onclick="window.location.href='https://twitter.com/JonathanMilli15'"
-    >
-      Twitter
-    </button>
-    <button onclick="window.location.href='mailto:logouts.deco-0e@icloud.com'">
-      Email
-    </button>
-    <br />
-    <p>I'm Jonathan.</p>
-    <p>A guy screwing around with computers.</p>
-    <p>I write code sometimes</p>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <section id="about" class="full-screen">
+      <h2>About</h2>
+      <p>I'm Jonathan.</p>
+      <p>A guy screwing around with computers.</p>
+      <p>I write code sometimes</p>
+    </section>
+
+    <section id="projects" class="full-screen">
+      <h2>Projects</h2>
+      <button
+        onclick="window.location.href='https://github.com/realprogrammersusevim/pomodoro'"
+      >
+        pomodoro
+      </button>
+      <button
+        onclick="window.location.href='https://github.com/realprogrammersusevim/dotfiles'"
+      >
+        dotfiles
+      </button>
+      <button
+        onclick="window.location.href='https://github.com/realprogrammersusevim/md-to-html.nvim'"
+      >
+        md-to-html.nvim
+      </button>
+      <button
+        onclick="window.location.href='https://github.com/realprogrammersusevim/cli-tools'"
+      >
+        cli-tools
+      </button>
+    </section>
+
+    <section id="contact" class="full-screen">
+      <h2>Contact</h2>
+      <button
+        onclick="window.location.href='https://snort.social/p/npub1uqeexjx2djkfwzxdnrnrrch5h2k4xn0uapcgsxm94ftaxrlhy5lqywjckg'"
+      >
+        Nostr
+      </button>
+      <button
+        onclick="window.location.href='https://github.com/realprogrammersusevim'"
+      >
+        GitHub
+      </button>
+      <button
+        onclick="window.location.href='mailto:logouts.deco-0e@icloud.com'"
+      >
+        Email
+      </button>
+    </section>
   </body>
 </html>
