fix: Include font and fix padding
Included the JetBrains Mono font from Google fonts and fixed the padded
on the headers.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Jonathan's Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono"
+    />
     <meta name="description" content="Jonathan's personal website." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
