fix(index): update email and project list
Updated the email I display and the projects shown.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
   <head>
     <title>Jonathan's Website</title>
@@ -29,9 +29,9 @@
     <section id="projects" class="full-screen">
       <h2>Projects</h2>
       <button
-        onclick="window.location.href='https://github.com/realprogrammersusevim/pomodoro'"
+        onclick="window.location.href='https://github.com/realprogrammersusevim/email-classifier'"
       >
-        pomodoro
+        email classifier
       </button>
       <button
         onclick="window.location.href='https://github.com/realprogrammersusevim/dotfiles'"
@@ -62,9 +62,7 @@
       >
         GitHub
       </button>
-      <button
-        onclick="window.location.href='mailto:logouts.deco-0e@icloud.com'"
-      >
+      <button onclick="window.location.href='mailto:git@jonathansm.dev'">
         Email
       </button>
     </section>
